@startuml

skinparam classAttributeIconSize 0
hide empty methods
hide empty attributes
left to right direction

class Company{
- designation
}
class ParameterCategory{
  -code
  -name
}
class TestType{
- Code
- Description
- Collecting method
}
class Test{
- code
- NhsCode
- createdAt
}

 TestType -[hidden]right-|> Company

Test "*" -- "1" TestType : classified as >
Test "*" -- "1..*" ParameterCategory : requested analysis of >
Company "1" -- "*" TestType : conducts >
Company "1" -- "*" ParameterCategory : capable of analysing >
Company "1" -- "*" Administrator : know >
TestType "1" -- "1..*" ParameterCategory : characterized by >
TestType "*" -- "1" Administrator : created by >

@enduml